<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">myIDkey</string>
    <string name="cancel">Cancel</string>
    <!-- action bar bottom -->
    <string name="action_settings">Settings</string>
    <string name="action_favourites">Favorites</string>
    <string name="action_key_kards">Keycards</string>
    <string name="action_files">Files</string>

    <!-- action bar main -->
    <string name="search_hint">Search </string>
    <string name="edit">Edit</string>
    <string name="plus">+</string>
    <string name="hello_world">Hello world!</string>
    <string name="logout_on_close">Logout on close</string>
    <string name="name">Name</string>

    <!-- folders -->
    <string name="key_cards_files_folder">/keycards</string>
    <string name="files_folder">/files</string>

    <!-- login screen -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="password_settings">Password Settings</string>
    <string name="remember_password">Remember Password</string>
    <string name="login_offline">Login Offline</string>
    <string name="generate">generate</string>
    <string name="passphrase_warning">Please write down your passphrase and store in secure location.</string>
    <string name="passphrase_warning_second">We will not know your passphrase and cannot help you if you forget it.</string>
    <string name="enter_passphrase">Enter Passphrase</string>
    <string name="re_enter_passphrase">Re-Enter Passphrase</string>

    <!--password generator-->
    <string name="number_of_characters">Number of Characters</string>
    <string name="a_z">a-z</string>
    <string name="A_z">A-Z</string>
    <string name="minimum_number_required">Minimum number required</string>
    <string name="numbers_0_9">0-9</string>
    <string name="special_characters">Special Characters</string>
    <string name="special_characters_list">~!?#^%()</string>
    <string name="hexadecimal">Hexadecimal</string>
    <string name="strength">Strength</string>
    <string name="strength_weak">Weak</string>
    <string name="strength_good">Good</string>
    <string name="strength_strong">Strong</string>
    <string name="examples_include">Examples include:</string>

    <!-- messages -->
    <string name="delete_message">Are you sure you want to delete this key card?</string>
    <string name="message_reqired">Please, write a name for the key card.</string>
    <string name="same_key_card_name">It appears you have already saved a keycard with this name. Please re-name your new keycard before saving.</string>
    <!-- action bar key kard -->
    <string name="actionbar_key_card_edit_photo">actionbar_key_kard_photo</string>
    <string name="actionbar_key_card_edit_audio">actionbar_key_kard_audio</string>
    <string name="actionbar_key_card_edit_save">Save</string>

    <!-- audio menu popup -->
    <string name="record_audio">Record Audio</string>
    <string name="tap_microphone">Tap microphone to record.</string>
    <string name="add_audio">Add Audio</string>
    <!-- photo menu popup -->
    <string name="take_photo">Take Photo</string>
    <string name="choose_existing">Choose Existing</string>
    <string name="add_photo">Add Photo</string>
    <!-- welcome screens -->
    <string name="welcome">Welcome to myIDkey!</string>
    <string name="you_must">You must pair your device to begin.</string>
    <string name="pair_now">PAIR NOW</string>
    <string name="turn_on_and_">Turn on your myIDkey and swipe your finger.</string>
    <string name="connecting_devices">Connecting Devices.</string>
    <string name="success">Success!</string>
    <string name="now_connected">Your devices are now connected.</string>
    <string name="login">LOGIN</string>
    <string name="logout">Logout</string>

    <!-- key card export pop up -->
    <string name="selected_stile">Selected Style</string>
    <string name="email">Email</string>
    <string name="text_message">Text Message</string>
    <string name="copy_to_clipboard">Copy To Clipboard</string>

    <!-- tag pop up -->
    <string name="new_">New</string>
    <string name="done">Done</string>
    <string name="add">Add</string>
    <string name="select_tags">Select Tags</string>

    <!-- settings screen -->

    <string name="settings_account_info">Account info</string>
    <string name="settings_sync_with_device">Sync With Device</string>
    <string name="settings_sync_with_cloud">Sync With Cloud</string>
    <string name="settings_get_bookmarklet_code">Get Bookmarklet Code</string>
    <string name="settings_import_keycards_csv">Import Keycards (CSV)</string>
    <string name="settings_export_keycards_csv">Export Keycards (CSV)</string>

    <!-- key card -->
    <string name="tags">Tags</string>
    <string name="type">Type</string>
    <string name="keycard">Keycard</string>
    <string name="favourite">Favorite</string>
    <string name="credit_card">Credit Card</string>
    <string name="number">Number</string>
    <string name="cvv_full">Card Verification Value</string>
    <string name="cvv">CVV</string>
    <string name="expire_date">Exp. Date</string>
    <string name="photos">Photo Attachments</string>
    <string name="audio">Audio Attachments</string>
    <string name="select">select</string>
    <string name="deleteKeycard">Delete Keycard</string>
    <string name="view">View</string>

    <!-- note -->
    <string name="note">Note</string>
    <string name="note_hint">Write something here..</string>

    <!-- edit favourites -->
    <string name="delete">Delete</string>
    <string name="move">Move</string>
    <string name="export">Export</string>


    <!-- messages -->
    <string name="copy_file_progress_message">Copying files. Please wait.</string>
    <string name="import_csv_file_progress_message">Importing key cards. Please wait.</string>
    <string name="file_name">File Name</string>
   	<string name="ok">Ok</string>
    <!-- mockups -->
    <string-array name="types">
        <item>Credit Card</item>
    </string-array>
    <string-array name="tags_list">
        <item>Work</item>
        <item>Family</item>
        <item>Business</item>
        <item>Finance</item>
        <item>Web</item>
    </string-array>
    <string-array name="key_card_types">
        <item>folder</item>
        <item>letter</item>
        <item>photo</item>
        <item>pin</item>
        <item>visa</item>
        <item>globe</item>
    </string-array>
    <string-array name="settings_list">
        <item>Account info</item>
        <item>Sync With Device</item>
        <item>Sync With Cloud</item>
        <item>Get Bookmarklet Code</item>
        <item>Import Keycards (CSV)</item>
        <item>Export Keycards (CSV)</item>
    </string-array>
    <string-array name="array_mockup">
        <item>aback</item>
        <item>abash</item>
        <item>abbey</item>
        <item>abhor</item>
        <item>abide</item>
        <item>abuse</item>
        <item>candidate</item>
        <item>capture</item>
        <item>careful</item>
        <item>catch</item>
        <item>cause</item>
        <item>celebrate</item>
        <item>forever</item>
        <item>fable</item>
        <item>fidelity</item>
        <item>fox</item>
        <item>funny</item>
        <item>fail</item>
        <item>jail</item>
        <item>jade</item>
        <item>jailor</item>
        <item>january</item>
        <item>jasmine</item>
        <item>jazz</item>
        <item>zero</item>
        <item>zoo</item>
        <item>zeus</item>
        <item>zebra</item>
        <item>zest</item>
        <item>zing</item>
    </string-array>

</resources>