<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:weightSum="2">

        <TextView
            style="@style/Roboto"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="15dp"
            android:layout_weight="1"
            android:text="@string/file_name"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/rename_image_new_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/edittext_selector"
            style="@style/Roboto"
            android:layout_marginRight="10dp" />
    </LinearLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/lite_gray" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:padding="10dp" >

        <Button
            android:id="@+id/rename_image_cancel"
            style="@style/Roboto"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
			android:layout_marginRight="10dp"           
            android:background="@drawable/button_shape_blue"
            android:text="@string/cancel"
            android:textColor="@color/white" />
        
        <Button
            android:id="@+id/rename_image_ok"
            style="@style/Roboto"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_shape_blue"
            android:text="@string/ok"
            android:textColor="@color/white" />

        

    </LinearLayout>

</LinearLayout>