<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/view_icon"
            android:padding="2dp"
            />
        <com.arkami.myidkey.common.CustomFontTextView
                android:id="@+id/key_card_on_long_click_menu_view"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/Roboto"
                android:padding="10dp"
                android:textSize="25sp"
                android:text="@string/view"
                />
    </LinearLayout>
    <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/lite_gray"
            />
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/edit_icon"
                android:padding="2dp"
                />
        <com.arkami.myidkey.common.CustomFontTextView
                android:id="@+id/key_card_on_long_click_menu_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/Roboto"
                android:textSize="25sp"
                android:padding="10dp"
                android:text="@string/edit"
                />
    </LinearLayout>
    <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            />
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/share_icon"
                android:padding="2dp"
                />
        <com.arkami.myidkey.common.CustomFontTextView
                android:id="@+id/key_card_on_long_click_menu_export"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="25sp"
                style="@style/Roboto"
                android:text="@string/export"
                />
    </LinearLayout>
    <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            />
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/trashcan"
                android:padding="2dp"
                />
        <com.arkami.myidkey.common.CustomFontTextView
                android:id="@+id/key_card_on_long_click_menu_delete"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="25sp"
                style="@style/Roboto"
                android:text="@string/delete"
                />
    </LinearLayout>
    <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            />
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/star_selected"
                android:padding="2dp"
                />
        <com.arkami.myidkey.common.CustomFontTextView
                android:id="@+id/key_card_on_long_click_menu_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="25sp"
                style="@style/Roboto"
                android:text="@string/favourite"
                />
        <ToggleButton
                android:id="@+id/keycard_favorite_toggle"
                android:layout_width="68dp"
                android:layout_height="20dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:textOff=""
                android:textOn=""
                android:button="@android:color/transparent"
                android:background="@drawable/on_off_selector"
                android:gravity="center"
                android:checked="false"/>

    </LinearLayout>
    <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="0dp"
            />
    <Button
            android:id="@+id/key_card_on_long_click_menu_cancel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            style="@style/Roboto"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:layout_margin="5dp"
            android:background="@drawable/button_shape_blue"
            />


</LinearLayout>