<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:background="@android:color/white"
              android:orientation="vertical">
    <com.arkami.myidkey.common.CustomFontTextView
            style="@style/Roboto"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:textSize="30sp"
            android:background="@android:color/white"
            android:layout_margin="15dp"
            android:text="@string/select_tags"/>
    <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            />
    <ListView
            android:id="@+id/tag_popup_tags_list"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:divider="@android:color/transparent"
            android:background="@android:color/white"
            android:choiceMode="multipleChoiceModal"
            android:orientation="vertical"/>
    <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            />
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="0dp"
            android:background="@android:color/white"
            android:orientation="horizontal"
            android:padding="10dp">
        <com.arkami.myidkey.common.CustomFontTextView
                style="@style/Roboto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.20"
                android:gravity="center"
                android:background="@android:color/white"
                android:text="@string/new_"
                android:textSize="20sp"/>
        <EditText
                style="@style/Roboto"
                android:id="@+id/tag_popup_tags_new_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_selector"
                android:layout_weight="0.80"/>
        <Button
                android:id="@+id/tag_popup_tags_add_button"
                android:layout_width="wrap_content"
                style="@style/Roboto"
                android:layout_height="26dp"
                android:background="@drawable/button_shape_blue_small"
                android:text="@string/add"
                android:textColor="@android:color/white"
                android:layout_gravity="center"/>
    </LinearLayout>
    <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            />
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@android:color/white"
            android:weightSum="2">
        <Button
                android:id="@+id/tag_popup_tags_done_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                style="@style/Roboto"
                android:textColor="@android:color/white"
                android:background="@drawable/button_shape_blue"
                android:text="@string/done"/>
        <ImageView
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="@android:color/darker_gray"
                />
        <Button
                android:id="@+id/tag_popup_tags_cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                style="@style/Roboto"
                android:layout_weight="1"
                android:textColor="@android:color/white"
                android:background="@drawable/button_shape_blue"
                android:layout_margin="5dp"
                />


    </LinearLayout>
</LinearLayout>